dist/1.0/bin/sample/retrieveUnpackaged/objects/Contract_to_BA_Relation__c.object
<CustomObject>
    <description>The Object Stores Relations between Contract and Billing Account. Intended for GTS SK</description>
    <fields>
        <fullName>Billing_Account_Name__c</fullName>
        <formula>Billing_Account__r.Billing_Account_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <description>Billing Account lookup</description>
        <inlineHelpText>Billing Account lookup</inlineHelpText>
        <label>Billing Account</label>
        <referenceTo>Billing_Accounts__c</referenceTo>
        <relationshipLabel>Related Contracts</relationshipLabel>
        <relationshipName>Related_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CContract__c</fullName>
        <label>Contract (custom)</label>
        <referenceTo>CContract__c</referenceTo>
        <relationshipLabel>Contract Billing Account Relations</relationshipLabel>
        <relationshipName>Contract_Billing_Account_Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <formula>CContract__r.StartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Status__c</fullName>
        <formula>TEXT(CContract__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <formula>TEXT(CContract__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <description>Lookup to Contract</description>
        <inlineHelpText>Lookup to Contract</inlineHelpText>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Related Billing Accounts</relationshipLabel>
        <relationshipName>Related_Billing_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Local_contract_number__c</fullName>
        <formula>CContract__r.Local_contract_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local contract number</label>
        <type>Text</type>
    </fields>
    <label>Contract Billing Account Relation</label>
    <nameField>
        <displayFormat>CBR-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Billing Account Relations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>